--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <main>
-        <section class="container-section">
+        <section class="tool-feature-section">
             <!-- functional -->
-            <div class="common-div">
+            <div class="feature">
                 <figure class="figure">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-wrench-adjustable" viewBox="0 0 16 16">
@@ -23,15 +23,13 @@
                             d="M11.5 9c.653 0 1.273-.139 1.833-.39L12 5.5 11 3l3.826-1.53A4.5 4.5 0 0 0 7.29 6.092l-6.116 5.096a2.583 2.583 0 1 0 3.638 3.638L9.908 8.71A4.5 4.5 0 0 0 11.5 9m-1.292-4.361-.596.893.809-.27a.25.25 0 0 1 .287.377l-.596.893.809-.27.158.475-1.5.5a.25.25 0 0 1-.287-.376l.596-.893-.809.27a.25.25 0 0 1-.287-.377l.596-.893-.809.27-.158-.475 1.5-.5a.25.25 0 0 1 .287.376M3 14a1 1 0 1 1 0-2 1 1 0 0 1 0 2" />
                     </svg>
                 </figure>
-                <div class="description-div">
+                <div class="description">
                     <h2 class="headings"> Fully functional </h2>
-                    <p class="description">AnyWebP handles all jobs involved with WebP conversion. From WebP to any or any to WebP.
-
-                    </p>
+                    <p class="description">AnyWebP handles all jobs involved with WebP conversion. From WebP to any or any to WebP.</p>
                 </div>
             </div>
             <!-- support -->
-            <div class="common-div">
+            <div class="feature">
                 <figure class="figure">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-envelope-check" viewBox="0 0 16 16">
@@ -41,7 +39,7 @@
                             d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0m-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686" />
                     </svg>
                 </figure>
-                <div class="description-div">
+                <div class="description">
                     <h2 class="headings"> 24/7 Support </h2>
                     <p  class="description">Contact us if you have issues or inquiries. Just drop the email to our inbox and we will respond
                         in 24 hours.
@@ -49,7 +47,7 @@
                 </div>
             </div>
             <!-- data -->
-            <div class="common-div">
+            <div class="feature">
                 <figure class="figure">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-file-earmark-lock  " viewBox="0 0 16 16">
@@ -59,7 +57,7 @@
                             d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z" />
                     </svg>
                 </figure>
-                <div class="description-div">
+                <div class="description">
                     <h2 class="headings"> Secure Data
                     </h2>
                     <p class="description">AnyWebP will not host any of your files. All conversion processes are done in the browser. No
@@ -71,7 +69,7 @@
                 </div>
             </div>
             <!-- batch -->
-            <div class="common-div">
+            <div class="feature">
                 <figure class="figure">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                         class="bi bi-hourglass-split" viewBox="0 0 16 16">
@@ -79,7 +77,7 @@
                             d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z" />
                     </svg>
                 </figure>
-                <div class="description-div">
+                <div class="description">
                     <h2 class="headings"> Batch Process
                     </h2>
                     <p class="description">Super fast speed to process hundreds of WebP at one time. Each file costs 1 second for
